--- a/frontend/index.html
+++ b/frontend/index.html
@@ -106,7 +106,7 @@
                         JD
                     </div>
                     <div class="user-info">
-                        <h4>John Doe</h4>
+                        <h4>Ayush Singh</h4>
                         <p>Administrator</p>
                     </div>
                 </div>
